Adjust global font spacing, add utility classes for margin, padding and alignment. adjust hero svg to account for scalability bug (line appearing under svg)

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -9,10 +9,6 @@
   margin: unset;
   padding: 4rem space.$l 10rem space.$l;
 
-  h1 {
-    margin-bottom: 2rem;
-  }
-
   .wave {
     animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
     animation-duration: 2.5s; /* Change to speed up or slow down */
@@ -50,6 +46,6 @@
 
   &-separator {
     position: absolute;
-    bottom: 0;
+    bottom: -2px;
   }
 }
